# FEM_thermal_simulation

./: CMakeLists.txt  README.md  config.txt  controller.cpp  controller.h  element.cpp  element.h  grid.cpp  grid.h  main.cpp  node.cpp  node.h  view.cpp  view.h
